--- a/apps/frontend-webshop-wte/src/app/pages/item-list-page/item-page/item-page.component.html
+++ b/apps/frontend-webshop-wte/src/app/pages/item-list-page/item-page/item-page.component.html
@@ -6,6 +6,6 @@
         <p class="item-price">{{ item.price.amount }} € / {{ item.price.unit }}</p>
     </div>
     <div id="back-to-items-container">
-        <a id="back-to-items-btn">Add to Cart</a>
+        <a id="back-to-items-btn" (click)="addToCart()">Add to Cart</a>
     </div>
 </div>
