--- a/apps/frontend-webshop-wte/src/app/components/item-thumbnail/item-thumbnail.component.html
+++ b/apps/frontend-webshop-wte/src/app/components/item-thumbnail/item-thumbnail.component.html
@@ -9,6 +9,6 @@
     </div>
     <div class="item-buttons">
         <a class="view-details-link" [routerLink]="['/items', item.id]">More Info</a>
-        <button class="add-to-cart-btn">Add to Cart</button>
+        <button class="add-to-cart-btn" (click)="addToCart()">Add to Cart</button>
     </div>
 </div>
