--- a/apps/frontend-webshop-wte/src/app/pages/checkout-page/checkout-page.component.html
+++ b/apps/frontend-webshop-wte/src/app/pages/checkout-page/checkout-page.component.html
@@ -21,4 +21,5 @@
         <h2>Your cart is empty 🛒</h2>
         <p>Browse items and add something to your cart!</p>
     </div>
+    <div class="spacer"></div>
 </ng-template>
